// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`XMP document > Nested lists > should set the inner literal 1`] = `
"<?xpacket begin="﻿" id="W5M0MpCehiHzreSzNTczkc9d"?>
<x:xmpmeta xmlns:x="adobe:ns:meta/">
	<rdf:RDF xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:ex="http://example.org/example/">
		<rdf:Description rdf:about="">
			<ex:bagOfSeq>
			   <rdf:Bag><rdf:li>findme</rdf:li></rdf:Bag>
			</ex:bagOfSeq>
		</rdf:Description>
	</rdf:RDF></x:xmpmeta>
<?xpacket end="w"?>"
`;

exports[`XMP document > Nested schemas > should create nested data 1`] = `
"<?xpacket begin="﻿" id="W5M0MpCehiHzreSzNTczkc9d"?>
<x:xmpmeta xmlns:x="adobe:ns:meta/">
	<rdf:RDF xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:xmpMM="http://ns.adobe.com/xap/1.0/mm/" xmlns:stRef="http://ns.adobe.com/xap/1.0/sType/ResourceRef#">
		<rdf:Description rdf:about="">
			<xmpMM:DerivedFrom rdf:parseType="Resource">
				
				   <stRef:documentID>abc-def-ghi-xyz</stRef:documentID>
				
			</xmpMM:DerivedFrom>
		</rdf:Description>
	</rdf:RDF></x:xmpmeta>
<?xpacket end="w"?>"
`;

exports[`XMP document > Odd prefixes > should accept and repair cd as the Dublin Core prefix 1`] = `
"<?xpacket begin="﻿" id="W5M0MpCehiHzreSzNTczkc9d"?>
<x:xmpmeta xmlns:x="adobe:ns:meta/">
	<rdf:RDF xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
		<rdf:Description rdf:about="">
		   <dc:format>application/pdf</dc:format>
		</rdf:Description>
	</rdf:RDF></x:xmpmeta>
<?xpacket end="w"?>"
`;

exports[`XMP document > Odd prefixes > should accept and repair fdr as the rdf prefix 1`] = `
"<?xpacket begin="﻿" id="W5M0MpCehiHzreSzNTczkc9d"?>
<x:xmpmeta xmlns:x="adobe:ns:meta/">
	<rdf:RDF xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
		<rdf:Description rdf:about="">
		   <dc:format>application/pdf</dc:format>
		</rdf:Description>
	</rdf:RDF></x:xmpmeta>
<?xpacket end="w"?>"
`;

exports[`XMP document > Odd prefixes > should accept and repair y as the xmpmeta prefix 1`] = `
"<?xpacket begin="﻿" id="W5M0MpCehiHzreSzNTczkc9d"?>
<x:xmpmeta xmlns:x="adobe:ns:meta/">
	<rdf:RDF xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
		<rdf:Description rdf:about="">
		   <dc:format>application/pdf</dc:format>
		</rdf:Description>
	</rdf:RDF></x:xmpmeta>
<?xpacket end="w"?>"
`;

exports[`XMP document > Serialisation Formats > should serialise to application/nquads 1`] = `
"<urn:xmp:doc> <http://ns.adobe.com/pdf/1.3/PDFVersion> "1.7" <urn:xmp:doc> .
<urn:xmp:doc> <http://ns.adobe.com/pdf/1.3/Producer> "@pdfa-lab/core" <urn:xmp:doc> .
<urn:xmp:doc> <http://purl.org/dc/elements/1.1/format> "application/pdf" <urn:xmp:doc> .
"
`;

exports[`XMP document > Serialisation Formats > should serialise to application/rdf+xml 1`] = `
"<rdf:RDF xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:pdf="http://ns.adobe.com/pdf/1.3/" xmlns:dc="http://purl.org/dc/elements/1.1/">
    <rdf:Description rdf:about="">
        <pdf:PDFVersion>1.7</pdf:PDFVersion>
        <pdf:Producer>@pdfa-lab/core</pdf:Producer>
        <dc:format>application/pdf</dc:format>
    </rdf:Description>
</rdf:RDF>"
`;

exports[`XMP document > Serialisation Formats > should serialise to applidation/ld+json 1`] = `
"{
  "@context": {
    "pdf": "http://ns.adobe.com/pdf/1.3/",
    "dc": "http://purl.org/dc/elements/1.1/"
  },
  "@id": "urn:xmp:doc",
  "pdf:PDFVersion": "1.7",
  "pdf:Producer": "@pdfa-lab/core",
  "dc:format": "application/pdf"
}"
`;

exports[`XMP document > Serialisation Formats > should serialise to applidation/n-triples 1`] = `
"<urn:xmp:doc> <http://ns.adobe.com/pdf/1.3/PDFVersion> "1.7" .
<urn:xmp:doc> <http://ns.adobe.com/pdf/1.3/Producer> "@pdfa-lab/core" .
<urn:xmp:doc> <http://purl.org/dc/elements/1.1/format> "application/pdf" .
"
`;

exports[`XMP document > Serialisation Formats > should serialise to text/n3 1`] = `
"@prefix : <#>.
@prefix pdf: <http://ns.adobe.com/pdf/1.3/>.
@prefix dc: <http://purl.org/dc/elements/1.1/>.

<>
    pdf:PDFVersion "1.7";
    pdf:Producer "@pdfa-lab/core";
    dc:format "application/pdf".
"
`;

exports[`XMP document > Serialisation Formats > should serialise to text/turtle 1`] = `
"@prefix : <#>.
@prefix pdf: <http://ns.adobe.com/pdf/1.3/>.
@prefix dc: <http://purl.org/dc/elements/1.1/>.

<>
    pdf:PDFVersion "1.7";
    pdf:Producer "@pdfa-lab/core";
    dc:format "application/pdf".
"
`;

exports[`XMP document > serialise XMP > should accept an existing XMP document 1`] = `
"<?xpacket begin="﻿" id="W5M0MpCehiHzreSzNTczkc9d"?>
<x:xmpmeta xmlns:x="adobe:ns:meta/">
	<rdf:RDF xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:pdf="http://ns.adobe.com/pdf/1.3/" xmlns:dc="http://purl.org/dc/elements/1.1/">
		<rdf:Description rdf:about="">
			<pdf:PDFVersion>1.7</pdf:PDFVersion>
			<pdf:Producer>@pdfa-lab/core</pdf:Producer>
			<dc:format>application/pdf</dc:format>
		</rdf:Description>
	</rdf:RDF></x:xmpmeta>
<?xpacket end="w"?>"
`;

exports[`XMP document > serialise XMP > should create a fresh XMP document 1`] = `
"<?xpacket begin="﻿" id="W5M0MpCehiHzreSzNTczkc9d"?>
<x:xmpmeta xmlns:x="adobe:ns:meta/">
	<rdf:RDF xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#">
	   
	</rdf:RDF></x:xmpmeta>
<?xpacket end="w"?>"
`;

exports[`XMP document > setMetaInfo > should add a new property to a fresh document 1`] = `
"<?xpacket begin="﻿" id="W5M0MpCehiHzreSzNTczkc9d"?>
<x:xmpmeta xmlns:x="adobe:ns:meta/">
	<rdf:RDF xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
	   <rdf:Description rdf:about=""><dc:format>text/plain</dc:format></rdf:Description>
	</rdf:RDF></x:xmpmeta>
<?xpacket end="w"?>"
`;

exports[`XMP document > setMetaInfo > should append Seq items if requested 1`] = `
"<?xpacket begin="﻿" id="W5M0MpCehiHzreSzNTczkc9d"?>
<x:xmpmeta xmlns:x="adobe:ns:meta/">
	<rdf:RDF xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
		<rdf:Description rdf:about="">
			<dc:creator>
			   <rdf:Seq><rdf:li>John Doe</rdf:li><rdf:li>Jane Doe</rdf:li></rdf:Seq>
			</dc:creator>
		</rdf:Description>
	</rdf:RDF></x:xmpmeta>
<?xpacket end="w"?>"
`;

exports[`XMP document > setMetaInfo > should append for empty indices 1`] = `
"<?xpacket begin="﻿" id="W5M0MpCehiHzreSzNTczkc9d"?>
<x:xmpmeta xmlns:x="adobe:ns:meta/">
	<rdf:RDF xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
		<rdf:Description rdf:about="">
			<dc:subject>
				<rdf:Bag>
				   <rdf:li>one</rdf:li><rdf:li>two</rdf:li><rdf:li>three</rdf:li>
				</rdf:Bag>
			</dc:subject>
		</rdf:Description>
	</rdf:RDF></x:xmpmeta>
<?xpacket end="w"?>"
`;

exports[`XMP document > setMetaInfo > should append localised language alternative values 1`] = `
"<?xpacket begin="﻿" id="W5M0MpCehiHzreSzNTczkc9d"?>
<x:xmpmeta xmlns:x="adobe:ns:meta/">
	<rdf:RDF
	 xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
	 xmlns:dc="http://purl.org/dc/elements/1.1/">
		<rdf:Description rdf:about="">
			<dc:title rdf:parseType="Resource">
				<rdf:Alt>
					<rdf:li xml:lang="x-default">Les Misérables</rdf:li>
					<rdf:li xml:lang="de">Die Elenden</rdf:li>
				</rdf:Alt>
			</dc:title>
		</rdf:Description>
	</rdf:RDF></x:xmpmeta>
<?xpacket end="w"?>"
`;

exports[`XMP document > setMetaInfo > should honour the \`noOverwrite\` option 1`] = `
"<?xpacket begin="﻿" id="W5M0MpCehiHzreSzNTczkc9d"?>
<x:xmpmeta xmlns:x="adobe:ns:meta/">
	<rdf:RDF xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:pdf="http://ns.adobe.com/pdf/1.3/" xmlns:dc="http://purl.org/dc/elements/1.1/">
		<rdf:Description rdf:about="">
			<pdf:PDFVersion>1.7</pdf:PDFVersion>
			<pdf:Producer>@pdfa-lab/core</pdf:Producer>
			<dc:format>application/pdf</dc:format>
		</rdf:Description>
	</rdf:RDF></x:xmpmeta>
<?xpacket end="w"?>"
`;

exports[`XMP document > setMetaInfo > should honour the noOverwrite option, when setting the default 1`] = `
"<?xpacket begin="﻿" id="W5M0MpCehiHzreSzNTczkc9d"?>
<x:xmpmeta xmlns:x="adobe:ns:meta/">
	<rdf:RDF
	 xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
	 xmlns:dc="http://purl.org/dc/elements/1.1/">
		<rdf:Description rdf:about="">
			<dc:title rdf:parseType="Resource">
			   <rdf:Alt><rdf:li xml:lang="x-default">Les Misérables</rdf:li></rdf:Alt>
			</dc:title>
		</rdf:Description>
	</rdf:RDF></x:xmpmeta>
<?xpacket end="w"?>"
`;

exports[`XMP document > setMetaInfo > should overwrite Seq items by default 1`] = `
"<?xpacket begin="﻿" id="W5M0MpCehiHzreSzNTczkc9d"?>
<x:xmpmeta xmlns:x="adobe:ns:meta/">
	<rdf:RDF xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
		<rdf:Description rdf:about="">
			<dc:creator>
			   <rdf:Seq><rdf:li>Jane Doe</rdf:li></rdf:Seq>
			</dc:creator>
		</rdf:Description>
	</rdf:RDF></x:xmpmeta>
<?xpacket end="w"?>"
`;

exports[`XMP document > setMetaInfo > should overwrite existing indices 1`] = `
"<?xpacket begin="﻿" id="W5M0MpCehiHzreSzNTczkc9d"?>
<x:xmpmeta xmlns:x="adobe:ns:meta/">
	<rdf:RDF xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
		<rdf:Description rdf:about="">
			<dc:subject>
			   <rdf:Bag><rdf:li>yksi</rdf:li><rdf:li>kaksi</rdf:li></rdf:Bag>
			</dc:subject>
		</rdf:Description>
	</rdf:RDF></x:xmpmeta>
<?xpacket end="w"?>"
`;

exports[`XMP document > setMetaInfo > should overwrite language alternative values by default 1`] = `
"<?xpacket begin="﻿" id="W5M0MpCehiHzreSzNTczkc9d"?>
<x:xmpmeta xmlns:x="adobe:ns:meta/">
	<rdf:RDF
	 xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
	 xmlns:dc="http://purl.org/dc/elements/1.1/">
		<rdf:Description rdf:about="">
			<dc:title rdf:parseType="Resource">
				<rdf:Alt>
					<rdf:li xml:lang="x-default">Les Misérables</rdf:li>
					<rdf:li xml:lang="de">Die Pest</rdf:li>
				</rdf:Alt>
			</dc:title>
		</rdf:Description>
	</rdf:RDF></x:xmpmeta>
<?xpacket end="w"?>"
`;

exports[`XMP document > setMetaInfo > should set Seq items 1`] = `
"<?xpacket begin="﻿" id="W5M0MpCehiHzreSzNTczkc9d"?>
<x:xmpmeta xmlns:x="adobe:ns:meta/">
	<rdf:RDF xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
		<rdf:Description rdf:about="">
			<dc:creator>
			   <rdf:Seq><rdf:li>John Doe</rdf:li></rdf:Seq>
			</dc:creator>
		</rdf:Description>
	</rdf:RDF></x:xmpmeta>
<?xpacket end="w"?>"
`;

exports[`XMP document > setMetaInfo > should set individual indices 1`] = `
"<?xpacket begin="﻿" id="W5M0MpCehiHzreSzNTczkc9d"?>
<x:xmpmeta xmlns:x="adobe:ns:meta/">
	<rdf:RDF xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
		<rdf:Description rdf:about="">
			<dc:subject>
			   <rdf:Bag><rdf:li>one</rdf:li><rdf:li>two</rdf:li></rdf:Bag>
			</dc:subject>
		</rdf:Description>
	</rdf:RDF></x:xmpmeta>
<?xpacket end="w"?>"
`;

exports[`XMP document > setMetaInfo > should set language alternatives 1`] = `
"<?xpacket begin="﻿" id="W5M0MpCehiHzreSzNTczkc9d"?>
<x:xmpmeta xmlns:x="adobe:ns:meta/">
	<rdf:RDF xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
		<rdf:Description rdf:about="">
			<dc:title>
				<rdf:Alt>
					<rdf:li xml:lang="x-default">Internet For Dummies, Remedial Edition</rdf:li>
				</rdf:Alt>
			</dc:title>
		</rdf:Description>
	</rdf:RDF></x:xmpmeta>
<?xpacket end="w"?>"
`;

exports[`XMP document > setMetaInfo > should wipe out all other language alternatives, when setting the default 1`] = `
"<?xpacket begin="﻿" id="W5M0MpCehiHzreSzNTczkc9d"?>
<x:xmpmeta xmlns:x="adobe:ns:meta/">
	<rdf:RDF
	 xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
	 xmlns:dc="http://purl.org/dc/elements/1.1/">
		<rdf:Description rdf:about="">
			<dc:title rdf:parseType="Resource">
				<rdf:Alt>
				   <rdf:li xml:lang="x-default">1000 Classic Pranks</rdf:li>
				</rdf:Alt>
			</dc:title>
		</rdf:Description>
	</rdf:RDF></x:xmpmeta>
<?xpacket end="w"?>"
`;
